# splat

./: AUTHORS  CHANGELOG  CMakeLists.txt  README.md
include/: splat_config.h.in
src/: CMakeLists.txt  splat.cpp  test.cpp
